Added Current Location

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 <style>
 p.space{line-height: 1.4;}
 </style>
-<p><b>About</b></p>
+<p style="margin-left:15em; font-size:25px"><b>About</b></p>
 <p style="text-align:left; font-size:25px; margin-left:15em; margin-right:15em" class="space"> The Troy Psychogeographic Library (TPL) is an offline, hyperlocal, peer-to-peer
 file-sharing network in physical space facilitating the creation + distribution of sound art. The library is a neighborhood commons—a digital resource promoting the fluid, unfettered exchange of experimental media. The library, as the name suggests, is also a psychogeographic game encouraging individuals to deviate from their predictable paths in order to form new perspectives on urban space. The library is designed to be a flexible, inclusive platform that encourages artists, social geographers, and community members to use it in the ways they see fit.
 </p>
